FIXED bug with names